adding new endpoint to confirm user register
